Fix Code block line wrap

--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -188,6 +188,12 @@ table {
     border: 1px solid #ddd;
     background-color: #eef;
     padding: 0 .4em;
+    /* Fix code blocks that cross lines */
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
   }
 
   #post ul,
